# Console-Messanger

./: README.md
Client/: CMakeLists.txt  client.cpp
Server/: CMakeLists.txt  server.cpp
